statistic: add release table subhead

--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -16,9 +16,11 @@
     <table summary="Column one has the location and size of accommodation, other columns show the type and number of properties available" class=" table table-bordered">
         <thead style="padding: 0">
             <tr style="padding: 0">
-                <th id="12" scope="col" style="min-width: 1px; font-size: 13px; padding: 0; text-align: center; font-weight: normal">
-                    12
-                </th>
+                {% for head_elem  in releas_subhead %}
+                    <th id="12" scope="col" style="min-width: 1px; font-size: 13px; padding: 0; text-align: center; font-weight: normal">
+                        {{ head_elem }}
+                    </th>
+                {% endfor %}
             </tr>
         </thead>
         <tbody>
